--- a/tests/TodoList.Api.Tests/TodoList.Api.Tests.csproj
+++ b/tests/TodoList.Api.Tests/TodoList.Api.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\TodoList.Api\TodoList.Api.csproj" />
+    <ProjectReference Include="..\..\TodoList.TestDataBuilder\TodoList.TestDataBuilder.csproj" />
   </ItemGroup>
 
   <ItemGroup>
