Add TodoItemService AddTodoItem() with hardcoded response for TDD flow.

--- a/src/TodoList.Application/TodoList.Application.csproj
+++ b/src/TodoList.Application/TodoList.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\TodoList.Domain\TodoList.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IRepositories\" />
+  </ItemGroup>
+
 </Project>
