--- a/tests/TodoList.Application.Tests/TodoList.Application.Tests.csproj
+++ b/tests/TodoList.Application.Tests/TodoList.Application.Tests.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\TodoList.Application\TodoList.Application.csproj" />
+    <ProjectReference Include="..\..\src\TodoList.Infrastructure\TodoList.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\TodoList.TestDataBuilder\TodoList.TestDataBuilder.csproj" />
   </ItemGroup>
 
   <ItemGroup>
