--- a/src/TodoList.Api/TodoList.Api.csproj
+++ b/src/TodoList.Api/TodoList.Api.csproj
@@ -9,6 +9,7 @@
 	
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="FluentAssertions" Version="8.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
