--- a/tests/TodoList.TestDataBuilder/TodoList.TestDataBuilder.csproj
+++ b/tests/TodoList.TestDataBuilder/TodoList.TestDataBuilder.csproj
@@ -9,7 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
-    <PackageReference Include="FluentAssertions" Version="8.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
@@ -17,12 +16,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\TodoList.Application\TodoList.Application.csproj" />
-    <ProjectReference Include="..\..\src\TodoList.Infrastructure\TodoList.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\TodoList.TestDataBuilder\TodoList.TestDataBuilder.csproj" />
+    <ProjectReference Include="..\..\src\TodoList.Domain\TodoList.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\" />
   </ItemGroup>
 
 </Project>
