--- a/tests/TodoList.UnitTests/TodoList.UnitTests.csproj
+++ b/tests/TodoList.UnitTests/TodoList.UnitTests.csproj
@@ -9,14 +9,17 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.7" />
+    <PackageReference Include="FluentAssertions" Version="8.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TodoList.Api\TodoList.Api.csproj" />
-    <ProjectReference Include="..\..\TodoList.TestDataBuilder\TodoList.TestDataBuilder.csproj" />
+    <ProjectReference Include="..\..\src\TodoList.Application\TodoList.Application.csproj" />
+    <ProjectReference Include="..\..\src\TodoList.Domain\TodoList.Domain.csproj" />
+    <ProjectReference Include="..\..\src\TodoList.Infrastructure\TodoList.Infrastructure.csproj" />
+    <ProjectReference Include="..\TodoList.TestDataBuilder\TodoList.TestDataBuilder.csproj" />
   </ItemGroup>
 
   <ItemGroup>
