--- a/tests/TodoList.IntegrationTests/TodoList.IntegrationTests.csproj
+++ b/tests/TodoList.IntegrationTests/TodoList.IntegrationTests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TodoList.Api\TodoList.API.csproj" />
+    <ProjectReference Include="..\..\src\TodoList.API\TodoList.Api.csproj" />
     <ProjectReference Include="..\TodoList.TestDataBuilder\TodoList.TestDataBuilder.csproj" />
   </ItemGroup>
 
