--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: '9.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore src/TodoList.sln
+      run: dotnet restore TodoList.sln
 
     - name: Build
       run: dotnet build --no-restore --configuration Release
